kubernetes/kubernetes/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: admin-backend
  name: admin-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-backend
  template:
    metadata:
      labels:
        io.kompose.service: admin-backend
    spec:
      containers:
        - args:
            - npm
            - run
            - start:dev
          image: afsalkp/admin:0.0.2
          name: admin-backend
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: admin-consumer
  name: admin-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-consumer
  template:
    metadata:
      labels:
        io.kompose.service: admin-consumer
    spec:
      containers:
        - args:
            - npm
            - run
            - consume
          image: afsalkp/admin:0.0.2
          name: admin-consumer
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: admin-backend
  name: admin-backend
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 3000
  selector:
    io.kompose.service: admin-backend
