kubernetes/kubernetes/ambassador.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ambassador-backend
  name: ambassador-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ambassador-backend
  template:
    metadata:
      labels:
        io.kompose.service: ambassador-backend
    spec:
      containers:
        - args:
            - npm
            - run
            - start:dev
          image: afsalkp/ambassador:0.0.1
          name: ambassador-backend
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ambassador-consumer
  name: ambassador-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ambassador-consumer
  template:
    metadata:
      labels:
        io.kompose.service: ambassador-consumer
    spec:
      containers:
        - args:
            - npm
            - run
            - consume
          image: afsalkp/ambassador:0.0.1
          name: ambassador-consumer
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ambassador-backend
  name: ambassador-backend
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 3000
  selector:
    io.kompose.service: ambassador-backend
